--- a/class-practice/my-app/package.json
+++ b/class-practice/my-app/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.13.4",
+    "@apollo/client": "3.13.3",
     "graphql": "^16.10.0",
     "next": "14.2.13",
     "react": "^18",
