--- a/class-basic/my-app/package.json
+++ b/class-basic/my-app/package.json
@@ -6,16 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@apollo/client": "^3.13.3",
+    "antd": "^5.24.5",
     "graphql": "^16.10.0",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-daum-postcode": "^3.2.0",
+    "react-dom": "^18",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
