--- a/class-practice/my-app/package.json
+++ b/class-practice/my-app/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^6.0.0",
     "@apollo/client": "^3.13.3",
     "antd": "^5.24.5",
+    "firebase": "^11.6.1",
     "graphql": "^16.10.0",
     "next": "14.2.13",
     "react": "^18",
