--- a/class-practice/my-app/package.json
+++ b/class-practice/my-app/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^6.0.0",
     "@apollo/client": "^3.13.3",
     "antd": "^5.24.5",
+    "apollo-upload-client": "^18.0.1",
     "firebase": "^11.6.1",
     "graphql": "^16.10.0",
     "next": "14.2.13",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.5",
+    "@types/apollo-upload-client": "^18.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
