--- a/class-practice/my-app/package.json
+++ b/class-practice/my-app/package.json
@@ -16,6 +16,7 @@
     "apollo-upload-client": "^18.0.1",
     "firebase": "^11.6.1",
     "graphql": "^16.10.0",
+    "lodash": "^4.17.21",
     "next": "14.2.13",
     "react": "^18",
     "react-daum-postcode": "^3.2.0",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.5",
     "@types/apollo-upload-client": "^18.0.0",
+    "@types/lodash": "^4.17.17",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
