--- a/class-practice/my-app/package.json
+++ b/class-practice/my-app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
     "@apollo/client": "^3.13.3",
+    "@hookform/resolvers": "^5.2.0",
     "antd": "^5.24.5",
     "apollo-upload-client": "^18.0.1",
     "firebase": "^11.6.1",
@@ -21,8 +22,10 @@
     "react": "^18",
     "react-daum-postcode": "^3.2.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.61.1",
     "react-infinite-scroll-component": "^6.1.0",
     "swiper": "^11.2.6",
+    "zod": "^4.0.13",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
