--- a/class-practice/my-app/package.json
+++ b/class-practice/my-app/package.json
@@ -13,10 +13,13 @@
     "@ant-design/icons": "^6.0.0",
     "@apollo/client": "^3.13.3",
     "@hookform/resolvers": "^5.2.0",
+    "@jinwoongcodebox/ui": "^1.1.1",
+    "@portone/browser-sdk": "^0.1.0",
     "antd": "^5.24.5",
     "apollo-upload-client": "^18.0.1",
     "firebase": "^11.6.1",
     "graphql": "^16.10.0",
+    "graphql-request": "^7.2.0",
     "lodash": "^4.17.21",
     "next": "14.2.13",
     "react": "^18",
@@ -24,7 +27,10 @@
     "react-dom": "^18",
     "react-hook-form": "^7.61.1",
     "react-infinite-scroll-component": "^6.1.0",
+    "supercompany-ui": "1.1.0",
     "swiper": "^11.2.6",
+    "uuid": "^11.1.0",
+    "zen-observable": "^0.10.0",
     "zod": "^4.0.13",
     "zustand": "^5.0.6"
   },
@@ -35,6 +41,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/zen-observable": "^0.8.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
